...
                secondChild: TextButton(
                    onPressed: () {
                      if (item.parentId != null) {
                        notifier.setById(item.parentId!);
                      }
                    },
                    child: const Text('Go parent')),
                crossFadeState: item.parentId != null
                    ? CrossFadeState.showSecond
                    : CrossFadeState.showFirst,
                duration: Duration(milliseconds: 300)),
            IconButton(
                onPressed: () async {
...
                      await confirmDialog(context, title: 'Delete todo?');
                  if (act == true) {
                    ref.read(todosProvider.notifier).deleteTodo(todo: item);
                    navigator.go('/');
                  }
                },
                tooltip: "Delete",
                icon: const Icon(Icons.delete)),
            IconButton(
              onPressed: () async {
                await notifier.updateTodo(item);
              },
              tooltip: "Save",
...
                    ),
                  ),
                  Flexible(
                      child: TextFieldWithConfirm(
                          key: Key(item.title),
                          text: item.title,
                          label: 'Title',
                          onConfirm: (value) {
                            ref.read(editIdProvider.notifier).state = true;
                            return notifier
                                .changeState(item.copyWith(title: value));
                          })),
                ]),
...
                        key: Key(item.description),
                        text: item.description,
                        onConfirm: (value) {
                          notifier
                              .changeState(item.copyWith(description: value));
                        },
                        label: 'Description',
                      ),
                    ),
                  ],
                ),
                Center(
                  child: PriorityMenuWidget(
...
