...
    required this.pieces,
  });

  UsedPart.fromPart({required Part part, int qty = 0})
      : maximoNumber = part.maximoNo,
        catalogNo = part.catalogNo,
        name = part.name,
        bin = part.bin,
        pieces = qty;

  UsedPart.empty({
    this.maximoNumber = '',
    this.catalogNo = '',
    this.name = '',
...
