...
                );
              }
            },
          ),
          ListTile(
            leading: const Icon(Icons.tag_sharp),
            title: const Text('Tags Editor'),
            onTap: (() {
              ref.read(tagsFilter.notifier).update((state) => '');
              ref.read(tagEditorProvider.notifier).update((state) => null);
              context.go('/TagsEditScreen');
            }),
          ),
...
            onTap: () {
              context.go('/LogOverviewScreen');
            },
          ),
          ListTile(
            leading: const Icon(Icons.upload_file),
            title: const Text('Update parts db'),
            onTap: () {
              Navigator.of(context).pop();
              showPartsDbUpdateDialog(context);
            },
          )
        ],
...
