...
        title: Form(
          key: formKey,
          child: TextFormField(
            controller: textController,
            validator: (v) =>
                ref.read(tagsProvider.notifier).isContainsTag(tag: editor.item),
            decoration: const InputDecoration(labelText: "Tag name"),
            onFieldSubmitted: (val) => _updateText(val, ref),
          ),
        ),
        trailing: editor.isChanged
            ? IconButton(
                onPressed: () => _confirmUpdate(ref, formKey),
...
