...
                        ? onTapTitle!()
                        : _openInEditor(ref, context),
                  ),
                ),
                if (item.date != null)
                  TextButton(
                    key: const Key('todoPreviewDate'),
                    onPressed: () => _postponeTodoDialog(context, ref),
                    child: Text(DateFormat('y-MM-dd').format(item.date!)),
                  ),
              ],
            ),
            Text(item.description.split('\n').last),
...
